Sprint2 final committed