@@ -14,7 +14,7 @@ public class BaseController {
         Sort.Direction direction = sortDirection.equalsIgnoreCase("asc")
                 ? Sort.Direction.ASC : Sort.Direction.DESC;
         List<Sort.Order> orders = new ArrayList<>();
-        Arrays.stream(sort).collect(Collectors.toList()).forEach(field -> {
+        Arrays.stream(sort).toList().forEach(field -> {
             Sort.Order order = new Sort.Order(direction, field);
             orders.add(order);
         });
